--- a/ocpcalc_config.yml
+++ b/ocpcalc_config.yml
@@ -35,15 +35,14 @@ model:
   
 optim:
   batch_size: 4
-  eval_batch_size: 20
-  num_workers: 16
+  eval_batch_size: 4
+  num_workers: 4
   lr_initial: 0.0001
   lr_gamma: 0.1
-  lr_milestones: # epochs at which lr_initial <- lr_initial * lr_gamma
-    - 4
-    - 8
-    - 12
-  warmup_epochs: 2
+  lr_milestones: # steps at which lr_initial <- lr_initial * lr_gamma
+    - 115082
+    - 230164
+    - 345246
+  warmup_steps: 57541
   warmup_factor: 0.2
   max_epochs: 20
-
