--- a/worker-spec-relax.yml
+++ b/worker-spec-relax.yml
@@ -6,40 +6,41 @@ spec:
   containers:
   - image: ulissigroup/kubeflow:predictions
     imagePullPolicy: Always
-    args: [dask-worker, --nthreads, '1',--nprocs,'1', --no-dashboard, --memory-limit,'16e9',--death-timeout, '60']
+    args: [dask-worker, --nthreads, '1',--nprocs,'1', --no-dashboard, --memory-limit,'16e9',--death-timeout, '600']
     name: dask
     env:
     - name: OMP_NUM_THREADS
       value: 1
+    - name: PYTHONPATH
+      value: "/home/jovyan/ocp:/home/jovyan/ocp/dask-predictions"
     resources:
       limits:
         cpu: "2"
         memory: 12G
+        #nvidia.com/gpu: "1"
       requests:
         cpu: "2"
         memory: 12G
+        #nvidia.com/gpu: "1"
     volumeMounts:
     - mountPath: /home/jovyan
-      name: workspace-ocp
+      name: workspace-zulissi
       subPath: dask-temp
-    - mountPath: /home/jovyan/ocp/configs
-      name: workspace-ocp
-      subPath: ocp/configs
-    - mountPath: /home/jovyan/additional_python_imports/ocpmodels
-      name: workspace-ocp
-      subPath: ocp/ocpmodels
-    - mountPath: /home/jovyan/ocp/data #Ensure that the mount path mirrors your local directory
-      name: oc20data
+    - mountPath: /home/jovyan/ocp/
+      name: workspace-zulissi
+      subPath: ocp/
+    - mountPath: /home/jovyan/shared-datasets #Ensure that the mount path mirrors your local directory
+      name: shared-datasets
     - mountPath: /home/jovyan/shared-scratch
-      name: scratch-vol
+      name: scratch-scratch
   volumes:
-  - name: oc20data
+  - name: shared-datasets
     persistentVolumeClaim:
       claimName: shared-datasets
-  - name: workspace-ocp
+  - name: workspace-zulissi
     persistentVolumeClaim:
-      claimName: workspace-ocp
-  - name: scratch-vol
+      claimName: workspace-zulissi
+  - name: scratch-scratch
     persistentVolumeClaim:
       claimName: shared-scratch
       
