--- a/.github/workflows/test_predictions.yaml
+++ b/.github/workflows/test_predictions.yaml
@@ -16,4 +16,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: Test with pytest
       run: |
-          PYTHONPATH=/home/jovyan/dask-predictions/ python bin/predictions.py configs/input.yaml
+          python setup.py develop && 
+          python bin/predictions.py configs/input.yaml
