--- a/.github/workflows/test_predictions.yaml
+++ b/.github/workflows/test_predictions.yaml
@@ -14,7 +14,7 @@ jobs:
     # and runs pytest in your pipenv environment
     steps:
     - uses: actions/checkout@v2
-    - name: Test with pytest
+    - name: Run example predictions
       run: |
           python setup.py develop && 
-          python bin/predictions.py configs/input.yaml
+          python bin/predictions.py /home/jovyan/dask-predictions/configs/input.yaml
