--- a/.github/workflows/test_predictions.yaml
+++ b/.github/workflows/test_predictions.yaml
@@ -20,7 +20,7 @@ jobs:
         lfs: true
     - name: Run example predictions
       run: |
-          python setup.py develop &&
-          REPO_DIR = $PWD && 
-          cd /home/jovyan/ocp &&
+          python setup.py develop 
+          REPO_DIR = $PWD  
+          cd /home/jovyan/ocp 
           python /home/jovyan/software/dask-predictions/bin/predictions.py /home/jovyan/software/dask-predictions/configs/inputs.yml
