--- a/.github/workflows/test_predictions.yaml
+++ b/.github/workflows/test_predictions.yaml
@@ -15,11 +15,11 @@ jobs:
     # checkout your code from your repository
     # and runs pytest in your pipenv environment
     steps:
-    - uses: actions/checkout@v2
+    - name: Run example predictions
+      uses: actions/checkout@v2
       with: 
         lfs: true
-    - name: Run example predictions
-      run: |
+    - run: |
         python setup.py develop &&
         cd /home/jovyan/ocp &&
         python /home/jovyan/software/dask-predictions/bin/predictions.py /home/jovyan/software/dask-predictions/configs/inputs.yml
