--- a/configs/inputs.yml
+++ b/configs/inputs.yml
@@ -1,6 +1,7 @@
 dask_config: |
-  from dask.distributed import Client
-  client = Client()
+  from dask.distributed import Client, LocalCluster
+  cluster = LocalCluster(n_workers=4, threads_per_worker=1)
+  client = Client(cluster)
 
 memory_cache_location: '/home/jovyan/shared-scratch/inference_cache'
 
@@ -10,13 +11,13 @@ output_options:
 
 # optional filters
 bulk_filters:
-    filter_by_mpids: ['mp-126']
+    filter_by_mpids: None # ['mp-126']
 
-    filter_by_elements: None # element_list: ['Cu', 'Pt', 'Sn', 'Al', 'Au'] #, 'Pd', 'Zn', 'Rh', 'Ru', 'Ir', 'Cr', 'In', 'Ga', 'Bi', 'Po', 'Tl', 'W', 'Y', 'Fe']
+    filter_by_acceptable_elements: ['Pt'] # element_list: ['Cu', 'Pt', 'Sn', 'Al', 'Au'] #, 'Pd', 'Zn', 'Rh', 'Ru', 'Ir', 'Cr', 'In', 'Ga', 'Bi', 'Po', 'Tl', 'W', 'Y', 'Fe']
 
-    filter_by_number_elements: None # [1,2]
+    filter_by_num_elements: [1] # [1,2]
 
-    filter_by_object_size: None # 60
+    filter_by_object_size: 60 # 60
 
     filter_by_Pourbaix_stability: 
       pH: [3,3]
@@ -31,9 +32,12 @@ adsorbate_filters:
 slab_filters:
     filter_by_object_size: 100
     
+    filter_by_max_miller_index: 1
+    
 adslab_prediction_steps:
   - step: predict
     type: direct
+    label: 'dE_gemnet_is2re_finetuned'
     config_path: 'configs/ocp_config_checkpoints/s2ef_all_gemnet-dT.yml'
     checkpoint_path: 'configs/ocp_config_checkpoints/gemnet_is2re_finetuned.pt'
   #- step: predict
