--- a/.github/workflows/test_predictions.yaml
+++ b/.github/workflows/test_predictions.yaml
@@ -15,6 +15,8 @@ jobs:
     # checkout your code from your repository
     # and runs pytest in your pipenv environment
     steps:
+    - run: |
+        sudo apt update && sudo apt install git-lfs
     - name: Run example predictions
       uses: actions/checkout@v2
       with: 
