--- a/configs/worker-spec.yml
+++ b/configs/worker-spec.yml
@@ -6,38 +6,38 @@ spec:
   containers:
   - image: ulissigroup/kubeflow:predictions
     imagePullPolicy: Always
-    args: [dask-worker, --nthreads, '1',--nprocs,'1', --no-dashboard, --memory-limit,'4 GiB',--death-timeout, '600']
+    args: [dask-worker, --nthreads, '1',--nprocs,'1', --no-dashboard, --memory-limit,'8 GiB',--death-timeout, '600']
     name: dask
     env:
     - name: OMP_NUM_THREADS
       value: 1
     - name: PYTHONPATH
-      value: "/home/jovyan/ocp:/home/jovyan/ocp/dask-predictions"
+      value: "/home/jovyan/ocp:/home/jovyan/dask-predictions"
     resources:
       limits:
         cpu: "2"
-        memory: 4G
+        memory: 8G
       requests:
         cpu: "2"
-        memory: 4G
+        memory: 8G
     volumeMounts:
-    - mountPath: /home/jovyan
-      name: workspace-ocp
-      subPath: dask-temp
-    - mountPath: /home/jovyan/ocp/
-      name: workspace-ocp
-      subPath: ocp/
-    - mountPath: /home/jovyan/ocp/data #Ensure that the mount path mirrors your local directory
+    - mountPath: /home/jovyan/ocp
+      name: workspace-inference
+      subPath: ocp
+    - mountPath: /home/jovyan/dask-predictions
+      name: workspace-inference
+      subPath: dask-predictions
+    - mountPath: /home/jovyan/shared-data
       name: shared-datasets
     - mountPath: /home/jovyan/shared-scratch
       name: scratch-scratch
   volumes:
+  - name: workspace-inference
+    persistentVolumeClaim:
+      claimName: workspace-inference
   - name: shared-datasets
     persistentVolumeClaim:
       claimName: shared-datasets
-  - name: workspace-ocp
-    persistentVolumeClaim:
-      claimName: workspace-ocp
   - name: scratch-scratch
     persistentVolumeClaim:
       claimName: shared-scratch
