--- a/configs/inputs.yml
+++ b/configs/inputs.yml
@@ -6,18 +6,18 @@ dask_config: |
 memory_cache_location: '/home/jovyan/shared-scratch/inference_cache'
 
 output_options:
-  pickle_path: None # '/home/jovyan/shared-scratch/Inference/test_screen.pkl'
+  pickle_path: None '/home/jovyan/shared-scratch/Inference/test_screen.pkl'
   verbose: False
 
 # optional filters
 bulk_filters:
-    filter_by_mpids: None # ['mp-126']
+    filter_by_mpids: ['mp-126',]
 
     filter_by_acceptable_elements: ['Pt'] # element_list: ['Cu', 'Pt', 'Sn', 'Al', 'Au'] #, 'Pd', 'Zn', 'Rh', 'Ru', 'Ir', 'Cr', 'In', 'Ga', 'Bi', 'Po', 'Tl', 'W', 'Y', 'Fe']
 
-    filter_by_num_elements: [1] # [1,2]
+#    filter_by_num_elements: [1] # [1,2]
 
-    filter_by_object_size: 60 # 60
+#    filter_by_object_size: 60 # 60
 
     filter_by_Pourbaix_stability: 
       pH: [3,3]
@@ -29,10 +29,10 @@ bulk_filters:
 adsorbate_filters:
     filter_by_smiles: ['*H']
 
-slab_filters:
-    filter_by_object_size: 100
+#slab_filters:
+#    filter_by_object_size: 100
     
-    filter_by_max_miller_index: 1
+#    filter_by_max_miller_index: 1
     
 adslab_prediction_steps:
   - step: predict
