fix inputs.yml slab configs

--- a/configs/inputs.yml
+++ b/configs/inputs.yml
@@ -29,10 +29,10 @@ bulk_filters:
 adsorbate_filters:
     filter_by_smiles: ['*H']
 
-#slab_filters:
-#    filter_by_object_size: 100
+slab_filters:
+    filter_by_object_size: 100
     
-#    filter_by_max_miller_index: 1
+    filter_by_max_miller_index: 1
     
 adslab_prediction_steps:
   - step: predict
