--- a/configs/worker-spec-relax.yml
+++ b/configs/worker-spec-relax.yml
@@ -12,7 +12,7 @@ spec:
     - name: OMP_NUM_THREADS
       value: 1
     - name: PYTHONPATH
-      value: "/home/jovyan/ocp:/home/jovyan/ocp/CATlas"
+      value: "/home/jovyan/ocp:/home/jovyan/ocp/catlas"
     resources:
       limits:
         cpu: "1"
