--- a/configs/inputs.yml
+++ b/configs/inputs.yml
@@ -1,7 +1,9 @@
-dask_config: |
-  from dask.distributed import Client, LocalCluster
-  cluster = LocalCluster(n_workers=4, threads_per_worker=1)
-  client = Client(cluster)
+dask:
+  config: |
+    from dask.distributed import Client, LocalCluster
+    cluster = LocalCluster(n_workers=4, threads_per_worker=1)
+    client = Client(cluster)
+  partitions: -1 # if -1, 1 row per surface otherwise number of partitions
 
 memory_cache_location: '/home/jovyan/shared-scratch/inference_cache'
 
