fix pickle path comments

--- a/configs/inputs.yml
+++ b/configs/inputs.yml
@@ -8,8 +8,8 @@ dask:
 memory_cache_location: '/home/jovyan/shared-scratch/inference_cache'
 
 output_options:
-  pickle_path: None '/home/jovyan/shared-scratch/Inference/test_screen.pkl'
-  verbose: False
+  pickle_path: None # '/home/jovyan/shared-scratch/Inference/test_screen.pkl'
+  verbose: false
 
 # optional filters
 bulk_filters:
