--- a/configs/inputs_brooks_debug.yml
+++ b/configs/inputs_brooks_debug.yml
@@ -1,29 +1,28 @@
 dask:
   config: |
-    from dask.distributed import Client
-    from dask_kubernetes import KubeCluster
-    cluster = KubeCluster('configs/worker-spec.yml', deploy_mode="local")
-    cluster.adapt(minimum=10, maximum=10, interval="30000 ms")
+    from dask.distributed import Client, LocalCluster
+    cluster = LocalCluster(n_workers=4, threads_per_worker=1)
     client = Client(cluster)
+    
   partitions: -1 
 
 memory_cache_location: '/home/jovyan/shared-scratch/inference_cache'
 
 output_options:
-  pickle: False # True pickles the resulting predictions
-  optional_additional_path_str: 'HER_test_screen'
+  pickle_path: None #'/home/jovyan/shared-scratch/Inference/BW_pkl_outputs/TMN_1.pkl'
+  verbose: True
 
 # optional filters
 bulk_filters:
-    filter_by_mpids: ['mp-126']
+    filter_by_mpids: ['mp-126', 'mp-101', 'mp-30']
 
     filter_by_acceptable_elements: None # metals = ['Ag', 'Y', 'N', 'Fe', 'Zr', 'Zn', 'Cu', 'Pb', 'S', 'Pt', 'W', 'P', 'Mo', 'Au', 'Ge', 'Ta', 'Te', 'Si', 'Sr', 'Se', 'Na', 'Tl', 'Ti', 'Pd', 'H', 'Rb', 'Ni', 'Co', 'V', 'Al', 'Hg', 'B', 'Rh', 'Bi', 'Ir', 'K', 'Tc', 'Hf', 'C', 'As', 'Sn', 'Sc', 'Sb', 'Os', 'Cd', 'Cr', 'Ru', 'Ga', 'Re', 'Cl', 'Cs', 'Nb', 'In', 'Ca', 'Mn']
 
-    filter_by_num_elements: [2,3] # [1,2]
+    filter_by_num_elements: [1,2,3] # [1,2]
 
     filter_by_object_size: 999 # 60
 
-    filter_by_required_elements: ['N']
+    #filter_by_required_elements: ['N']
 
 adsorbate_filters:
     filter_by_smiles: ['*H', '*CO','*OH','*CHO']
@@ -37,7 +36,7 @@ adslab_prediction_steps:
  - step: predict
    type: direct
    label: 'dE_gemnet_is2re_finetuned'
-   config_path: '/home/jovyan/catlas/configs/ocp_config_checkpoints/s2ef_all_gemnet-dT.yml'
+   config_path: '/home/jovyan/catlas/configs/ocp_config_checkpoints/gemnet_actual.yml'
    checkpoint_path: '/home/jovyan/catlas/configs/ocp_config_checkpoints/gemnet_is2re_finetuned.pt'
 
   #- step: predict
