--- a/configs/ocp_config_checkpoints/gemnet_actual.yml
+++ b/configs/ocp_config_checkpoints/gemnet_actual.yml
@@ -1,5 +1,21 @@
-includes:
-- /home/jovyan/catlas/configs/ocp_config_checkpoints/s2ef_all_base.yml
+
+trainer: energy
+
+dataset:
+  - src: /home/jovyan/catlas/configs/ocp_config_checkpoints/
+    normalize_labels: True
+    target_mean: -1.525913953781128
+    target_std: 2.279365062713623
+
+task:
+  dataset: single_point_lmdb
+  description: "Relaxed state energy prediction from initial structure."
+  type: regression
+  metric: mae
+  labels:
+    - relaxed energy
+
+logger: wandb
 
 model:
   name: gemnet_t
@@ -35,19 +51,18 @@ model:
 optim:
   batch_size: 32
   eval_batch_size: 32
-  eval_every: 5000
-  num_workers: 2
+  num_workers: 8
   lr_initial: 5.e-4
   optimizer: AdamW
   optimizer_params: {"amsgrad": True}
+  # scheduler: ExponentialLR
+  # gamma: 0.99
   scheduler: ReduceLROnPlateau
   mode: min
   factor: 0.8
   patience: 3
   max_epochs: 80
-  force_coefficient: 100
-  energy_coefficient: 1
   ema_decay: 0.999
   clip_grad_norm: 10
   loss_energy: mae
-  loss_force: l2mae
+  weight_decay: 0  # 2e-6 (TF weight decay) / 1e-4 (lr) = 2e-2
