--- a/.github/workflows/test_kuberunner.yaml
+++ b/.github/workflows/test_kuberunner.yaml
@@ -8,7 +8,7 @@ jobs:
   build:
     name: Run example predictions
     # runs on the latest Ubuntu
-    runs-on: [self-hosted, linux, catlas]
+    runs-on: [self-hosted, linux, catlas-runner]
     # runs within your Docker container
     container:
       image: docker://ulissigroup/kubeflow:predictions
