--- a/.github/workflows/test_predictions.yaml
+++ b/.github/workflows/test_predictions.yaml
@@ -3,7 +3,8 @@ name: Example predictions with docker
 env:
   OMP_NUM_THREADS: '1'
 # workflow triggered by any push on any branch
-on: [push]
+on: [workflow_dispatch] #[push]
+
 jobs:
   build:
     name: Run example predictions
