--- a/.github/workflows/test_kuberunner.yaml
+++ b/.github/workflows/test_kuberunner.yaml
@@ -13,7 +13,7 @@ jobs:
     container:
       image: docker://ulissigroup/kubeflow:predictions
       volumes:
-        - /home/jovyan/shared-scratch
+        - /home/jovyan/shared-scratch:/home/jovyan/shared-scratch
 
     # checkout your code from your repository
     # and runs pytest in your pipenv environment
